V4.12.1.262 - Changed required Java to 11, Moved device selection templates to file.